tests/ui/rpc/fail/function_returning_impl_iterator.stderr
error[E0277]: the trait bound `impl Iterator<Item = usize>: futures_core::stream::Stream` is not satisfied
 --> tests/ui/rpc/fail/function_returning_impl_iterator.rs:8:8
  |
8 |     fn test(&mut self) -> impl std::iter::Iterator<Item = usize> {
  |        ^^^^ the trait `futures_core::stream::Stream` is not implemented for `impl Iterator<Item = usize>`
  |
  = help: the following other types implement trait `futures_core::stream::Stream`:
            &mut S
            Abortable<St>
            AssertUnwindSafe<S>
            Box<S>
            Buffer<S, Item>
            BufferUnordered<St>
            Buffered<St>
            Either<A, B>
          and $N others
note: required by a bound in `process_stream`
 --> tests/ui/rpc/fail/function_returning_impl_iterator.rs:8:8
  |
8 |     fn test(&mut self) -> impl std::iter::Iterator<Item = usize> {
  |        ^^^^ required by this bound in `process_stream`

error[E0277]: the trait bound `impl Iterator<Item = usize>: futures_core::stream::Stream` is not satisfied
 --> tests/ui/rpc/fail/function_returning_impl_iterator.rs:8:8
  |
8 |     fn test(&mut self) -> impl std::iter::Iterator<Item = usize> {
  |        ^^^^ the trait `futures_core::stream::Stream` is not implemented for `impl Iterator<Item = usize>`
  |
  = help: the following other types implement trait `futures_core::stream::Stream`:
            &mut S
            Abortable<St>
            AssertUnwindSafe<S>
            Box<S>
            Buffer<S, Item>
            BufferUnordered<St>
            Buffered<St>
            Either<A, B>
          and $N others
note: required by a bound in `extract_stream_item`
 --> tests/ui/rpc/fail/function_returning_impl_iterator.rs:6:1
  |
6 | #[rpc::namespace]
  | ^^^^^^^^^^^^^^^^^ required by this bound in `extract_stream_item`
7 | impl A {
8 |     fn test(&mut self) -> impl std::iter::Iterator<Item = usize> {
  |        ---- required by a bound in this
  = note: this error originates in the attribute macro `rpc::namespace` (in Nightly builds, run with -Z macro-backtrace for more info)
